--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -46,16 +46,18 @@
       </nav>
     </header>
     <main class="container">
-      <section class="titulo">
+      <section>
+        <div class="titulo">
         <h1>ATRAÇÕES</h1>
-
+      </div>
       <div class="slickImgs">
         <img src="../src/imagens/La_Vella.jpg" alt="" />
         <img src="../src/imagens/spar.jpg" alt="" />
         <img src="../src/imagens/mirante.jpg" alt="" />
         <img src="../src/imagens/canillo.jpg" alt="" />
         <img src="../src/imagens/Soldeu.jpg" alt="" />
-      </div>
+      </section>
+      <section>
       <ul type="none" class="galleryContainer">
         <li>
           <img src="../src/imagens/La_Vella.jpg" alt="" />
@@ -90,6 +92,23 @@
           <p>Atividades na Neve</p>
         </li>
       </ul>
+    </section>
+    <section class="formulario">
+      <form action="">
+        <select name="xd" id="poggers">
+          <option value="" hidden>Escolha seu favorito e nos envie</option>
+          <option value="vella">Andorra La Vella</option>
+          <option value="termais">Spars de Águas Termais</option>
+          <option value="canillo">Canillo</option>
+          <option value="soldeu">Soldeu</option>
+          <option value="encamp">Encamp</option>
+          <option value="mirantes">Mirantes</option>
+          <option value="romanticas">Igrejas Românticas</option>
+          <option value="atividades">Atividades na Neve</option>
+        </form>
+        </select>
+
+    </section>
     </main>
     <footer>
       <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
