--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -105,8 +105,11 @@
           <option value="mirantes">Mirantes</option>
           <option value="romanticas">Igrejas Românticas</option>
           <option value="atividades">Atividades na Neve</option>
-        </form>
         </select>
+        <div class="buttonContainer">
+          <button><p>Enviar</p></button>
+        </div>
+      </form>
 
     </section>
     </main>
