--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -107,7 +107,7 @@
           <option value="atividades">Atividades na Neve</option>
         </select>
         <div class="buttonContainer">
-          <button><p>Enviar</p></button>
+          <button>Enviar</button>
         </div>
       </form>
 
