--- a/pages/historia.html
+++ b/pages/historia.html
@@ -46,75 +46,63 @@
           influências devido à sua localização estratégica nos Pirineus entre a
           França e a Espanha<span>.</span>
         </h2>
-        <!--
-        <p>
-          A história de Andorra, um micro-estado europeu localizado nos
-          Pirenéus, ligado à nação catalã, mas que conseguiu manter certa
-          autonomia até a independência de 1994. Andorra sempre teve
-          dificuldades com a Espanha e França, que não respeitaram sempre a sua
-          independência. O principado de Andorra foi durante séculos um
-          território essencialmente agrícola e de pastorícia, onde a prática da
-          caça era frequente. Segundo algumas lendas, Carlos Magno teria sido o
-          fundador de Andorra. No entanto, Andorra foi povoada desde a
-          Pré-história e o antigo povo dos "Andosins" é mencionado em escritos
-          da Antiguidade. A independência de Andorra é reconhecida de facto pela
-          primeira vez na época carolíngia quando forma um semi-Estado da Marca
-          de Espanha para proteger o império das invasões árabes.
-        </p>
-        <p>
-          Andorra é um país de 77 mil habitantes da Europa Meridional,
-          localizado na cordilheira dos Pirineus entre a França e a Espanha.
-          Esses dois países compartilham o Poder Executivo do território
-          andorrano, cujo sistema de governo é o coprincipado parlamentarista.
-        </p>
-        -->
-        <ul class="content">
-          <li>
-            <p>
-              <strong>Fundação:</strong> Acredita-se que Andorra tenha sido
+        <section class="tabela">
+          <table>
+            <thead>
+              <th><strong>Fundação</strong></th>
+              <th><strong>Domínio Conjunto</strong></th>
+              <th><strong>Idade Moderna</strong></th>
+              <th><strong>Século XX</strong></th>
+              <th><strong>Século XXI</strong></th>
+            </thead>
+            <tbody>
+              <td>
+                <p>Acredita-se que Andorra tenha sido
               estabelecida como um território independente no final do século
               VIII ou início do século IX, durante o governo de Carlos Magno, o
               imperador franco. Segundo a lenda, Carlos Magno teria concedido o
               território de Andorra aos habitantes locais como recompensa por
               sua ajuda na defesa contra os mouros.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong>Domínio Conjunto:</strong> Desde então, Andorra tem sido
-              um co-principado, com dois governantes: o Bispo de Urgel, na
-              Espanha, e o Conde de Foix, na França. Esse sistema de governo
-              conjunto é uma característica única da história de Andorra. No
-              entanto, em 1993, o tratado de Bayonne concedeu poderes ao Bispo
-              de Urgel e ao Presidente da República Francesa sobre questões
-              internas do país.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong>Idade Moderna:</strong> Durante a Idade Moderna, Andorra
-              manteve sua independência, embora tenha enfrentado pressões dos
-              países vizinhos, especialmente durante os períodos de conflito
-              entre França e Espanha.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong>Século XX:</strong> No século XX, Andorra começou a se
-              modernizar e abrir-se ao mundo. Em 1958, uma nova Constituição foi
-              promulgada, estabelecendo o Principado de Andorra como uma
-              democracia parlamentar.
-            </p>
-          </li>
-          <li>
-            <p>
-              <strong>Século XXI:</strong> Nos anos 2000, Andorra passou por uma
-              série de reformas legais e financeiras para se tornar mais
-              transparente em questões financeiras e fiscais, atraindo
-              investidores estrangeiros.
-            </p>
-          </li>
-        </ul>
+                </p>
+              </td>
+              <td>
+                <p>
+                  Desde então, Andorra tem sido
+                  um co-principado, com dois governantes: o Bispo de Urgel, na
+                  Espanha, e o Conde de Foix, na França. Esse sistema de governo
+                  conjunto é uma característica única da história de Andorra. No
+                  entanto, em 1993, o tratado de Bayonne concedeu poderes ao Bispo
+                  de Urgel e ao Presidente da República Francesa sobre questões
+                  internas do país.
+                </p>
+              </td>
+              <td>
+                <p>
+                  Durante a Idade Moderna, Andorra
+                manteve sua independência, embora tenha enfrentado pressões dos
+                países vizinhos, especialmente durante os períodos de conflito
+                entre França e Espanha.
+              </p>
+              </td>
+              <td>
+                <p>
+                  No século XX, Andorra começou a se
+                modernizar e abrir-se ao mundo. Em 1958, uma nova Constituição foi
+                promulgada, estabelecendo o Principado de Andorra como uma
+                democracia parlamentar.
+                </p>
+              </td>
+              <td>
+                <p>
+                  Nos anos 2000, Andorra passou por uma
+                série de reformas legais e financeiras para se tornar mais
+                transparente em questões financeiras e fiscais, atraindo
+                investidores estrangeiros.
+                </p>
+              </td>
+            </tbody>
+          </table>
+        </section>
         <p>
           A história de Andorra é única devido ao seu status de co-principado e
           sua localização geográfica entre a França e a Espanha. Ela testemunhou
