--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         </ul>
       </nav>
     </header>
-    <div>
+    <main>
       <div class="slickImgs">
         <img src="./src/imagens/andorra city1.jpg" alt="" />
         <img src="./src/imagens/andorra city2.jpg" alt="" />
         <img src="./src/imagens/andorra city3.jpg" alt="" />
       </div>
-      <div class="infoContainer">
+      <section class="infoContainer">
         <h1>Andorra</h1>
         <div class="info">
           <div>
@@ -72,8 +72,10 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
+        <p id="xd">Andorra é um pequeno país localizado nos Pirineus, no sudoeste da Europa, entre a França e a Espanha. É conhecido por suas deslumbrantes paisagens montanhosas, com picos cobertos de neve no inverno e uma rica oferta de atividades ao ar livre, como esqui e caminhadas. A capital, Andorra-a-Velha (Andorra la Vella), é uma charmosa cidade situada no vale, onde se concentram as principais lojas, restaurantes e atrações culturais. O país possui uma cultura única, influenciada pelo catalão, espanhol e francês, e oferece uma atmosfera acolhedora para os visitantes que buscam explorar suas montanhas, tradições e vida urbana.
+        </p>
+      </section>
+    </main>
     <footer>
       <img src="./src/imagens/unasp logo.png" alt="" class="logo" />
       <hr />
