--- a/pages/cultura.html
+++ b/pages/cultura.html
@@ -36,46 +36,88 @@
         </ul>
       </nav>
     </header>
-    <div class="container">
-      <div>
+    <main class="container">
+      <section>
         <img src="../src/imagens/cultureimg.jpg" alt="" />
         <div class="content">
           <h1>CULTURA</h1>
         </div>
-      </div>
-      <div class="textContainer">
-        <span>Línguas:</span>
-        <p>
-          Andorra tem duas línguas oficiais: o catalão e o francês. O catalão é
-          a língua mais amplamente falada e é usada na maioria das comunicações
-          do governo e da mídia. O francês também é amplamente falado e
-          compreendido, devido à proximidade da França. Religião: A religião
+      </section>
+      <section class="textContainer">
+        <h2 id="subTitle">A cultura de Andorra é uma mistura fascinante de influências catalãs, espanholas e francesas, moldada pela sua localização geográfica nos Pirineus e pela sua história única como um co-principado.</h2>
+        <ul>
+          <li>
+            <span>Línguas:</span>
+            <p>
+              Andorra tem duas línguas oficiais: o catalão e o francês. O catalão é
+              a língua mais amplamente falada e é usada na maioria das comunicações
+              do governo e da mídia. O francês também é amplamente falado e
+              compreendido, devido à proximidade da França.
+            </p>
+          </li>
+          <li>
+            <span>Religião:</span>
+            <p>A religião
           predominante em Andorra é o cristianismo, com a Igreja Católica sendo
           a fé mais comum. Há várias igrejas e capelas católicas romanas no
-          país. Festivais e Tradições: Andorra celebra várias festas e tradições
-          ao longo do ano, muitas delas com raízes religiosas. A Diada de Santa
-          Maria (Festa Nacional) é uma das celebrações mais importantes. Além
-          disso, as festas de Carnaval, Páscoa e Natal também são comemoradas
-          com entusiasmo. Culinária: A gastronomia de Andorra é influenciada
-          pela cozinha catalã e francesa. Pratos tradicionais incluem trinxat
-          (uma espécie de batata amassada com couve e bacon), escudella (um
-          ensopado de carne e vegetais) e caracóis. Além disso, a queijaria e a
-          produção de licores são parte importante da cultura culinária. Arte e
-          Arquitetura: Andorra tem uma cena artística emergente, com galerias de
+          país.
+            </p>
+          </li>
+          <li>
+            <span>Festivais e Tradições:</span>
+            <p>Andorra celebra várias festas e tradições
+              ao longo do ano, muitas delas com raízes religiosas. A Diada de Santa
+              Maria (Festa Nacional) é uma das celebrações mais importantes. Além
+              disso, as festas de Carnaval, Páscoa e Natal também são comemoradas
+              com entusiasmo.
+            </p>
+          </li>
+          <li>
+            <span>Culinária:</span>
+            <p>A gastronomia de Andorra é influenciada
+              pela cozinha catalã e francesa. Pratos tradicionais incluem trinxat
+              (uma espécie de batata amassada com couve e bacon), escudella (um
+              ensopado de carne e vegetais) e caracóis. Além disso, a queijaria e a
+              produção de licores são parte importante da cultura culinária.</p>
+          </li>
+          <li>
+            <span>Arte e Arquitetura:</span>
+            <p>
+              Andorra tem uma cena artística emergente, com galerias de
           arte e eventos culturais. Além disso, a arquitetura do país é
           caracterizada por edifícios de estilo montanhês tradicional, com
-          telhados inclinados e pedra como material predominante. Esportes de
-          Inverno: Dada a sua localização nas montanhas, Andorra é um destino
+          telhados inclinados e pedra como material predominante.
+            </p>
+          </li>
+          <li>
+            <span>Esportes de Inverno:</span>
+            <p>
+              Dada a sua localização nas montanhas, Andorra é um destino
           popular para esportes de inverno, como esqui e snowboard. Isso também
-          faz parte importante da cultura e economia do país. Compras: Andorra é
+          faz parte importante da cultura e economia do país.
+            </p>
+          </li>
+          <li>
+            <span>Compras:</span>
+            <p>Andorra é
           conhecida por suas lojas duty-free e é um destino popular para compras
-          de produtos eletrônicos, roupas, perfumes e muito mais. Música e
-          Dança: A música e a dança tradicionais de Andorra muitas vezes
+          de produtos eletrônicos, roupas, perfumes e muito mais.
+            </p>
+          </li>
+          <li>
+            <span>Música e Dança:</span>
+            <p>
+              A música e a dança tradicionais de Andorra muitas vezes
           incorporam elementos dos países vizinhos. A sardana, uma dança catalã,
           é uma das formas de dança mais conhecidas.
+            </p>
+          </li>
+        </ul>
+        <p id="xdd">
+          A cultura de Andorra é única e diversificada devido à sua localização e à influência de suas nações vizinhas. Ela valoriza suas tradições locais, ao mesmo tempo em que se adapta às influências modernas, tornando-a um destino encantador para explorar e apreciar.
         </p>
-      </div>
-    </div>
+      </section>
+    </main>
     <footer>
       <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
       <hr />
