--- a/pages/economia.html
+++ b/pages/economia.html
@@ -37,39 +37,62 @@
       </nav>
     </header>
     <main class="container">
-      <section>
+      <section class="content">
         <h1>ECONOMIA</h1>
-        <img src="../src/imagens/economia.jpg" alt="lojas" class="slickImgs" />
+        <img src="../src/imagens/economia.jpg" alt="lojas"/>
       </section>
-      <section class="text">
-          <ul type="none" class="">
-            <li>
+      <section>
+        <h2>A economia de Andorra é caracterizada por sua pequena escala, diversificação limitada e uma forte dependência do turismo e do setor financeiro.</p>
+          <ul type="none" class="textContainer">
+            <li class="text">
               <p>
-                A economia do país é concentrada no setor de serviços, que
-                responde por 88,5% do PIB (ONU, 2020). O turismo e o comércio
-                são as principais fontes de receita de Andorra. O país dispõe de
-                atrativos turísticos que vão desde as famosas estações de esqui
-                até museus e suas paisagens naturais.
+                O turismo é o principal motor da economia andorrana. O país é conhecido por suas estações de esqui, paisagens montanhosas deslumbrantes e atividades ao ar livre. Durante o inverno, turistas de toda a Europa visitam Andorra para esquiar e praticar snowboard. No verão, as trilhas para caminhadas e ciclismo atraem visitantes.
               </p>
             </li>
-            <li>
+            <li class="text">
               <p>
-                Andorra recebe, em média, 8 milhões de turistas por ano, a
-                maioria vinda dos países vizinhos (França e Espanha). Além do
-                comércio e turismo, destaca-se também os serviços financeiros.
+                Andorra é famosa por suas lojas duty-free, onde os visitantes podem comprar produtos eletrônicos, roupas, perfumes e outros itens a preços competitivos. Isso atrai compradores de toda a região, especialmente da França e da Espanha.
               </p>
             </li>
-            <li>
+            <li class="text">
               <p>
-                A indústria representa 11% da economia do país, voltada para a
-                produção de móveis e tabaco. A agricultura responde por apenas
-                0,5% do PIB, uma vez que somente 5% das terras são consideradas
-                aráveis. Alguns produtos do setor primário são trigo, aveia,
-                centeio e cevada. Na pecuária, destaca-se a criação de caprinos
-                e gado.
+                O setor financeiro também desempenha um papel importante na economia de Andorra. O país tem uma reputação de sigilo bancário, embora tenha se esforçado para se tornar mais transparente e em conformidade com os padrões internacionais nos últimos anos.
+              </p>
+            </li>
+            <li class="text">
+              <p>
+                Apesar de seu terreno montanhoso, Andorra possui algumas terras férteis em vales, onde a agricultura e a criação de gado são praticadas. Produtos agrícolas incluem batatas, tabaco, frutas e vegetais.
+              </p>
+            </li>
+            <li class="text">
+              <p>
+                A maior parte da força de trabalho de Andorra está ligada ao setor de serviços, que engloba turismo, comércio e serviços financeiros. O país tem uma taxa de desemprego relativamente baixa, em parte devido à demanda sazonal por mão de obra no setor de turismo.
+              </p>
+            </li>
+            <li class="text">
+              <p>
+                O euro é a moeda oficial de Andorra, embora o país não seja membro da União Europeia.
+              </p>
+            </li>
+            <li class="text">
+              <p>
+                Andorra não é membro da União Europeia, mas tem acordos de cooperação com a UE que facilitam o comércio e a circulação de mercadorias.
+              </p>
+            </li>
+            <li class="text">
+              <p>
+                A economia de Andorra é vulnerável a flutuações no setor de turismo, especialmente em momentos de recessão econômica. Além disso, o país enfrentou desafios para diversificar sua economia além do turismo e do setor financeiro.
+              </p>
+            </li>
+            <li class="text">
+              <p>
+                Nos últimos anos, Andorra tem passado por reformas para modernizar sua economia e atrair investimentos estrangeiros, ao mesmo tempo em que se esforça para se tornar mais transparente no setor financeiro.
               </p>
             </li>
           </ul>
+          <p>
+            A economia de Andorra é relativamente pequena, mas tem se adaptado ao longo do tempo, dependendo do turismo e das oportunidades oferecidas pelo comércio duty-free e pelo setor financeiro para impulsionar seu desenvolvimento econômico.
+          </p>
       </section>
     </main>
     <footer>
