--- a/pages/governo.html
+++ b/pages/governo.html
@@ -37,7 +37,7 @@
       </nav>
     </header>
     <main class="container">
-      <section>
+      <section class="content">
         <h1>GOVERNO</h1>
         <img
           src="../src/imagens/governo.jpg"
@@ -46,21 +46,32 @@
         />
       </section>
       <section class="text">
-      <p>
-        Copríncipes: O Bispo de Urgell, que é um alto representante da Igreja Católica, e o Presidente da França, que é o chefe de estado da França, atuam como copríncipes honorários de Andorra. No entanto, eles não exercem poderes governamentais diretos.
-
-Chefe de Governo: O chefe de governo de Andorra é o chefe executivo do país. O chefe de governo é escolhido pelo Conselho Geral de Andorra, que é o parlamento do país, e é chamado de "Cap de Govern" (Chefe de Governo).
-
-Conselho Geral: O Conselho Geral de Andorra é o órgão legislativo do país. Ele é composto por 28 membros eleitos pelo voto direto da população. Os membros do Conselho Geral são eleitos a cada quatro anos.
-
-Gabinete de Ministros: O Chefe de Governo nomeia ministros que compõem o gabinete de governo. Esses ministros são responsáveis por diferentes áreas da administração pública, como educação, saúde, finanças, etc.
-
-Sistema Legal: Andorra tem um sistema legal baseado no direito civil, influenciado pelas tradições legais espanholas e francesas.
-
-Relações Internacionais: Apesar de ser um país pequeno, Andorra mantém relações diplomáticas com vários outros países e é membro de organizações internacionais, como as Nações Unidas.
-
-Economia: Andorra tem uma economia voltada para o turismo, com um sistema bancário próspero. O governo tem trabalhado para diversificar a economia nas últimas décadas.
-      </p>
+        <h2>
+          O governo de Andorra é uma monarquia parlamentar com um sistema político único conhecido como co-principado. Nesse sistema, o país é liderado por dois co-príncipes que compartilham o poder.
+        </h2>
+        <div class="textContainer">
+          <p>
+            <span>Copríncipes:</span> O Bispo de Urgell, que é um alto representante da Igreja Católica, e o Presidente da França, que é o chefe de estado da França, atuam como copríncipes honorários de Andorra. No entanto, eles não exercem poderes governamentais diretos.
+          </p>
+          <p>
+            <span>Chefe de Governo:</span> O chefe de governo de Andorra é o chefe executivo do país. O chefe de governo é escolhido pelo Conselho Geral de Andorra, que é o parlamento do país, e é chamado de "Cap de Govern" (Chefe de Governo).
+          </p>
+          <p>
+            <span>Conselho Geral:</span> O Conselho Geral de Andorra é o órgão legislativo do país. Ele é composto por 28 membros eleitos pelo voto direto da população. Os membros do Conselho Geral são eleitos a cada quatro anos.
+          </p>
+          <p>
+            <span>Gabinete de Ministros:</span> O Chefe de Governo nomeia ministros que compõem o gabinete de governo. Esses ministros são responsáveis por diferentes áreas da administração pública, como educação, saúde, finanças, etc.
+          </p>
+          <p>
+            <span>Sistema Legal:</span> Andorra tem um sistema legal baseado no direito civil, influenciado pelas tradições legais espanholas e francesas.
+          </p>
+          <p>
+            <span>Relações Internacionais:</span> Apesar de ser um país pequeno, Andorra mantém relações diplomáticas com vários outros países e é membro de organizações internacionais, como as Nações Unidas.
+          </p>
+          <p>
+            <span>Economia:</span> Andorra tem uma economia voltada para o turismo, com um sistema bancário próspero. O governo tem trabalhado para diversificar a economia nas últimas décadas.
+          </p>
+        </div>
     </section>
     <footer>
       <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
